--- a/Spotify.html
+++ b/Spotify.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <title>Spotify Status</title>
 </head>
-
-<a href="https://api.statusbadges.me/openspotify/1126614446643609704" target="_blank" rel="noopener"><img src="https://api.statusbadges.me/badge/spotify/1126614446643609704" alt="spotify"></a>
+<body>
+    <a href="https://api.statusbadges.me/openspotify/1126614446643609704" target="_blank" rel="noopener">
+        <img src="https://api.statusbadges.me/badge/spotify/1126614446643609704" alt="Spotify status" />
+    </a>
+</body>
+</html>
